; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fmt-merge-msg.c_cmp_string_list_util_as_integral.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fmt-merge-msg.c_cmp_string_list_util_as_integral.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list_item = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @cmp_string_list_util_as_integral to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_string_list_util_as_integral(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.string_list_item*, align 8
  %6 = alloca %struct.string_list_item*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.string_list_item*
  store %struct.string_list_item* %8, %struct.string_list_item** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.string_list_item*
  store %struct.string_list_item* %10, %struct.string_list_item** %6, align 8
  %11 = load %struct.string_list_item*, %struct.string_list_item** %6, align 8
  %12 = call i32 @util_as_integral(%struct.string_list_item* %11)
  %13 = load %struct.string_list_item*, %struct.string_list_item** %5, align 8
  %14 = call i32 @util_as_integral(%struct.string_list_item* %13)
  %15 = sub nsw i32 %12, %14
  ret i32 %15
}

declare dso_local i32 @util_as_integral(%struct.string_list_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
